header dropdown alignment  is fixed

--- a/frontend/src/components/Navbar/navbar.scss
+++ b/frontend/src/components/Navbar/navbar.scss
@@ -24,7 +24,7 @@
     cursor: pointer;
     .navbar-dropdown-menu {
       width: auto;
-      margin: auto -35px !important;
+      left: -80px !important;
       top: 0px !important;
       img {
         margin-right: 8px;
